Update fonts to variable font

--- a/src/app.css
+++ b/src/app.css
@@ -15,7 +15,8 @@
 }
 
 body {
-	font-family: 'Satoshi-Medium';
+	font-family: 'Satoshi';
+	font-weight: 500;
 	font-size: var(--body-font-size);
 }
 
