--- a/src/app.css
+++ b/src/app.css
@@ -122,3 +122,24 @@ body {
 		padding-block-end: calc(var(--section-spacing) / 2);
 	}
 }
+
+/* Button */
+.btn {
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
+
+	width: fit-content;
+
+	padding-block: 0.625rem;
+	padding-inline: 1.75rem;
+}
+
+.btn__icon {
+	font-size: 1.5rem;
+}
+
+.btn--primary {
+	background: var(--accent-brown);
+	color: var(--bg-sand-light);
+}
