--- a/src/app.css
+++ b/src/app.css
@@ -15,6 +15,12 @@
 	--section-spacing--sm: 6.25rem;
 
 	--header-z-index: 1000;
+
+	/* Screen sizes */
+	/* --screen-xs: 0 - 767px */
+	--screen-sm: 768px;
+	--screen-md: 1024px;
+	--screen-lg: 1200px;
 }
 
 @utility container {
@@ -38,7 +44,7 @@ h1,
 h2,
 h3,
 h4,
-h5{
+h5 {
 	letter-spacing: -1px;
 }
 
