--- a/src/app.css
+++ b/src/app.css
@@ -18,9 +18,9 @@
 
 	/* Screen sizes */
 	/* --screen-xs: 0 - 767px */
-	--screen-sm: 768px;
-	--screen-md: 1024px;
-	--screen-lg: 1200px;
+	--screen-sm: min-width: 768px;
+	--screen-md: min-width: 1024px;
+	--screen-lg: min-width: 1200px;
 }
 
 @utility container {
