--- a/src/app.css
+++ b/src/app.css
@@ -17,10 +17,10 @@
 	--header-z-index: 1000;
 
 	/* Screen sizes */
-	/* --screen-xs: 0 - 767px */
-	--screen-sm: 768px;
+	/* --screen-xs: 0 - 767px
+	/*--screen-sm: 768px;
 	--screen-md: 1024px;
-	--screen-lg: 1200px;
+	--screen-lg: 1200px;*/
 }
 
 @utility container {
